--- a/basic/13_OpenFace/MASK.cfg
+++ b/basic/13_OpenFace/MASK.cfg
@@ -40,6 +40,10 @@
                 <D type="TXT">EULER_ANGLE_Z</D>
                 <D type="TXT">NUMERIC</D>
             </VAL>
+            <VAL>
+                <D type="TXT">DATAVECTORMESSAGE</D>
+                <D type="TXT">MESSAGE</D>
+            </VAL>
         </PARAM>
         <PARAM name="outlet" type="OUTLET" />
         <PARAM name="script" type="SCRIPT">
@@ -77,7 +81,7 @@
         </PARAM>
         <PARAM name="object" type="TEXT">
             <VAL>
-                <D type="TXT">mask.dae</D>
+                <D type="TXT">mesh-68-puntos5.dae</D>
             </VAL>
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
@@ -143,7 +147,7 @@
         </PARAM>
         <PARAM name="polygonmode" type="POLYGONMODE">
             <VAL>
-                <D type="NUM">1</D>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
         <PARAM name="blending" type="BLENDING">
@@ -153,17 +157,17 @@
         </PARAM>
         <PARAM name="translatex" type="TRANSLATEX">
             <VAL>
-                <D type="FUNCTION">FACE_POSITION_X*0.03</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
             <VAL>
-                <D type="FUNCTION">-FACE_POSITION_Y*0.03</D>
+                <D type="FUNCTION">0.05*(4/3)*(screen_height/screen_width)</D>
             </VAL>
         </PARAM>
         <PARAM name="translatez" type="TRANSLATEZ">
             <VAL>
-                <D type="FUNCTION">-1*FACE_POSITION_Z*0.032</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="rotatex" type="ROTATEX">
@@ -171,29 +175,29 @@
                 <D type="FUNCTION">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="rotatey" type="ROTATEY">
+        <PARAM name="rotatey" type="ROTATEY" property="published">
             <VAL>
                 <D type="FUNCTION">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="rotatez" type="ROTATEZ">
+        <PARAM name="rotatez" type="ROTATEZ" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">scalez*screen_height/screen_width</D>
+                <D type="FUNCTION">scalez</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">scalez</D>
+                <D type="FUNCTION">-scalez*(4/3)*screen_height/screen_width</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez" type="SCALEZ" property="published">
             <VAL>
-                <D type="FUNCTION">7</D>
+                <D type="FUNCTION">0.22</D>
             </VAL>
         </PARAM>
         <PARAM name="eyex" type="FUNCTION">
@@ -248,12 +252,228 @@
         </PARAM>
         <PARAM name="offsety" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">-0.46</D>
+                <D type="FUNCTION">-0.3</D>
             </VAL>
         </PARAM>
         <PARAM name="offsetz" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.5</D>
+                <D type="FUNCTION">2.5</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="cullface" type="NUM" property="published" options="AUTOMATIC,ENABLED,DISABLED">
+            <VAL>
+                <D type="NUM">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="vertices_openface" type="TEXT" property="published">
+            <VAL>
+                <D type="TXT">-0.858090, 0.577598, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.853085, 0.339800, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.823047, 0.099498, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.775487, -0.138301, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.690381, -0.356075, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.548703, -0.548770, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.386000, -0.716479, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.195762, -0.849146, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.014501, -0.884189, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.229770, -0.844140, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.412499, -0.706468, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.582711, -0.538757, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.718410, -0.337401, -0.000004</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.803515, -0.117125, -0.000003</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.843566, 0.125678, -0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.860800, 0.371403, -0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.863303, 0.614208, -0.000001</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.692021, 0.761391, -0.000000</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.591896, 0.851503, -0.000000</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.449219, 0.879037, -0.000000</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.301535, 0.859012, -0.000000</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.161359, 0.793931, -0.000001</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.121494, 0.803943, -0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.261669, 0.871528, -0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.411881, 0.902450, -0.000001</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.557062, 0.879923, -0.000001</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.669700, 0.792316, -0.000001</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.016148, 0.624608, -0.000000</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.016148, 0.466912, -0.000000</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.013645, 0.304211, -0.000000</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.011141, 0.146516, -0.000000</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.178848, 0.043891, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.096246, 0.008846, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.008638, -0.021192, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.078970, 0.008846, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.161572, 0.046391, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.521994, 0.599372, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.436888, 0.654441, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.328022, 0.655031, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.236980, 0.584104, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.331198, 0.558697, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.440236, 0.557638, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.207320, 0.588551, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.301538, 0.666890, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.406341, 0.670065, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.500559, 0.615017, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.419045, 0.573730, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.311065, 0.572671, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.334112, -0.244780, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.208136, -0.192907, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.089570, -0.166442, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.001705, -0.188673, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.089337, -0.162208, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.215902, -0.183202, 0.000001</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.341878, -0.232957, 0.000001</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.224371, -0.366343, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.102629, -0.426685, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.001002, -0.443623, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.090695, -0.431561, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.212437, -0.375454, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.278072, -0.253713, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.090695, -0.244185, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.003477, -0.254653, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.089682, -0.236657, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.286585, -0.243009, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.092858, -0.311819, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">0.001816, -0.320288, 0.000002</D>
+            </VAL>
+            <VAL>
+                <D type="TXT">-0.090284, -0.310761, 0.000002</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="no_perspective" type="NUM" property="published" options="AUTO,ON">
+            <VAL>
+                <D type="NUM">1</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
