--- a/basic/13_OpenFace/iconcvblobs.cfg
+++ b/basic/13_OpenFace/iconcvblobs.cfg
@@ -80,7 +80,7 @@
                 <D type="FUNCTION">0.3</D>
             </VAL>
             <VAL>
-                <D type="FUNCTION">height</D>
+                <D type="FUNCTION">1</D>
             </VAL>
         </PARAM>
         <PARAM name="height" type="FUNCTION">
@@ -95,10 +95,16 @@
             <VAL>
                 <D type="FUNCTION">-0.333125</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">0</D>
+            </VAL>
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
             <VAL>
                 <D type="FUNCTION">-0.200000</D>
+            </VAL>
+            <VAL>
+                <D type="FUNCTION">0</D>
             </VAL>
         </PARAM>
         <PARAM name="rotate" type="ROTATEZ">
@@ -110,8 +116,14 @@
             <VAL>
                 <D type="FUNCTION">1</D>
             </VAL>
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
+            <VAL>
+                <D type="FUNCTION">1</D>
+            </VAL>
             <VAL>
                 <D type="FUNCTION">1</D>
             </VAL>
@@ -127,251 +139,451 @@
             <P name="texture">0</P>
             <P name="width">0</P>
             <P name="height">0</P>
+            <P name="translatex">0</P>
+            <P name="translatey">0</P>
+            <P name="scalex">0</P>
+            <P name="scaley">0</P>
         </PRE>
         <PRE>
             <P name="texture">1</P>
             <P name="width">1</P>
             <P name="height">1</P>
+            <P name="translatex">1</P>
+            <P name="translatey">1</P>
+            <P name="scalex">1</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">2</P>
             <P name="width">2</P>
             <P name="height">2</P>
+            <P name="translatex">2</P>
+            <P name="translatey">2</P>
+            <P name="scalex">2</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">3</P>
             <P name="width">3</P>
             <P name="height">3</P>
+            <P name="translatex">3</P>
+            <P name="translatey">3</P>
+            <P name="scalex">3</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">4</P>
             <P name="width">4</P>
             <P name="height">4</P>
+            <P name="translatex">4</P>
+            <P name="translatey">4</P>
+            <P name="scalex">4</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">5</P>
             <P name="width">5</P>
             <P name="height">5</P>
+            <P name="translatex">5</P>
+            <P name="translatey">5</P>
+            <P name="scalex">5</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">6</P>
             <P name="width">6</P>
             <P name="height">6</P>
+            <P name="translatex">6</P>
+            <P name="translatey">6</P>
+            <P name="scalex">6</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">7</P>
             <P name="width">7</P>
             <P name="height">7</P>
+            <P name="translatex">7</P>
+            <P name="translatey">7</P>
+            <P name="scalex">7</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">8</P>
             <P name="width">8</P>
             <P name="height">8</P>
+            <P name="translatex">8</P>
+            <P name="translatey">8</P>
+            <P name="scalex">8</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">9</P>
             <P name="width">9</P>
             <P name="height">9</P>
+            <P name="translatex">9</P>
+            <P name="translatey">9</P>
+            <P name="scalex">9</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">10</P>
             <P name="width">10</P>
             <P name="height">10</P>
+            <P name="translatex">10</P>
+            <P name="translatey">10</P>
+            <P name="scalex">10</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">11</P>
             <P name="width">11</P>
             <P name="height">11</P>
+            <P name="translatex">11</P>
+            <P name="translatey">11</P>
+            <P name="scalex">11</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">12</P>
             <P name="width">12</P>
             <P name="height">12</P>
+            <P name="translatex">12</P>
+            <P name="translatey">12</P>
+            <P name="scalex">12</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">13</P>
             <P name="width">13</P>
             <P name="height">13</P>
+            <P name="translatex">13</P>
+            <P name="translatey">13</P>
+            <P name="scalex">13</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">14</P>
             <P name="width">14</P>
             <P name="height">14</P>
+            <P name="translatex">14</P>
+            <P name="translatey">14</P>
+            <P name="scalex">14</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">15</P>
             <P name="width">15</P>
             <P name="height">15</P>
+            <P name="translatex">15</P>
+            <P name="translatey">15</P>
+            <P name="scalex">15</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">16</P>
             <P name="width">16</P>
             <P name="height">16</P>
+            <P name="translatex">16</P>
+            <P name="translatey">16</P>
+            <P name="scalex">16</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">17</P>
             <P name="width">17</P>
             <P name="height">17</P>
+            <P name="translatex">17</P>
+            <P name="translatey">17</P>
+            <P name="scalex">17</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">18</P>
             <P name="width">18</P>
             <P name="height">18</P>
+            <P name="translatex">18</P>
+            <P name="translatey">18</P>
+            <P name="scalex">18</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">19</P>
             <P name="width">19</P>
             <P name="height">19</P>
+            <P name="translatex">19</P>
+            <P name="translatey">19</P>
+            <P name="scalex">19</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">20</P>
             <P name="width">20</P>
             <P name="height">20</P>
+            <P name="translatex">20</P>
+            <P name="translatey">20</P>
+            <P name="scalex">20</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">21</P>
             <P name="width">21</P>
             <P name="height">21</P>
+            <P name="translatex">21</P>
+            <P name="translatey">21</P>
+            <P name="scalex">21</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">22</P>
             <P name="width">22</P>
             <P name="height">22</P>
+            <P name="translatex">22</P>
+            <P name="translatey">22</P>
+            <P name="scalex">22</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">23</P>
             <P name="width">23</P>
             <P name="height">23</P>
+            <P name="translatex">23</P>
+            <P name="translatey">23</P>
+            <P name="scalex">23</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">24</P>
             <P name="width">24</P>
             <P name="height">24</P>
+            <P name="translatex">24</P>
+            <P name="translatey">24</P>
+            <P name="scalex">24</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">25</P>
             <P name="width">25</P>
             <P name="height">25</P>
+            <P name="translatex">25</P>
+            <P name="translatey">25</P>
+            <P name="scalex">25</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">26</P>
             <P name="width">26</P>
             <P name="height">26</P>
+            <P name="translatex">26</P>
+            <P name="translatey">26</P>
+            <P name="scalex">26</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">27</P>
             <P name="width">27</P>
             <P name="height">27</P>
+            <P name="translatex">27</P>
+            <P name="translatey">27</P>
+            <P name="scalex">27</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">28</P>
             <P name="width">28</P>
             <P name="height">28</P>
+            <P name="translatex">28</P>
+            <P name="translatey">28</P>
+            <P name="scalex">28</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">29</P>
             <P name="width">29</P>
             <P name="height">29</P>
+            <P name="translatex">29</P>
+            <P name="translatey">29</P>
+            <P name="scalex">29</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">30</P>
             <P name="width">30</P>
             <P name="height">30</P>
+            <P name="translatex">30</P>
+            <P name="translatey">30</P>
+            <P name="scalex">30</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">31</P>
             <P name="width">31</P>
             <P name="height">31</P>
+            <P name="translatex">31</P>
+            <P name="translatey">31</P>
+            <P name="scalex">31</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">32</P>
             <P name="width">32</P>
             <P name="height">32</P>
+            <P name="translatex">32</P>
+            <P name="translatey">32</P>
+            <P name="scalex">32</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">33</P>
             <P name="width">33</P>
             <P name="height">33</P>
+            <P name="translatex">33</P>
+            <P name="translatey">33</P>
+            <P name="scalex">33</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">34</P>
             <P name="width">34</P>
             <P name="height">34</P>
+            <P name="translatex">34</P>
+            <P name="translatey">34</P>
+            <P name="scalex">34</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">35</P>
             <P name="width">35</P>
             <P name="height">35</P>
+            <P name="translatex">35</P>
+            <P name="translatey">35</P>
+            <P name="scalex">35</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">36</P>
             <P name="width">36</P>
             <P name="height">36</P>
+            <P name="translatex">36</P>
+            <P name="translatey">36</P>
+            <P name="scalex">36</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">37</P>
             <P name="width">37</P>
             <P name="height">37</P>
+            <P name="translatex">37</P>
+            <P name="translatey">37</P>
+            <P name="scalex">37</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">38</P>
             <P name="width">38</P>
             <P name="height">38</P>
+            <P name="translatex">38</P>
+            <P name="translatey">38</P>
+            <P name="scalex">38</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">39</P>
             <P name="width">39</P>
             <P name="height">39</P>
+            <P name="translatex">39</P>
+            <P name="translatey">39</P>
+            <P name="scalex">39</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">40</P>
             <P name="width">40</P>
             <P name="height">40</P>
+            <P name="translatex">40</P>
+            <P name="translatey">40</P>
+            <P name="scalex">40</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">41</P>
             <P name="width">41</P>
             <P name="height">41</P>
+            <P name="translatex">41</P>
+            <P name="translatey">41</P>
+            <P name="scalex">41</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">42</P>
             <P name="width">42</P>
             <P name="height">42</P>
+            <P name="translatex">42</P>
+            <P name="translatey">42</P>
+            <P name="scalex">42</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">43</P>
             <P name="width">43</P>
             <P name="height">43</P>
+            <P name="translatex">43</P>
+            <P name="translatey">43</P>
+            <P name="scalex">43</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">44</P>
             <P name="width">44</P>
             <P name="height">44</P>
+            <P name="translatex">44</P>
+            <P name="translatey">44</P>
+            <P name="scalex">44</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">45</P>
             <P name="width">45</P>
             <P name="height">45</P>
+            <P name="translatex">45</P>
+            <P name="translatey">45</P>
+            <P name="scalex">45</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">46</P>
             <P name="width">46</P>
             <P name="height">46</P>
+            <P name="translatex">46</P>
+            <P name="translatey">46</P>
+            <P name="scalex">46</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">47</P>
             <P name="width">47</P>
             <P name="height">47</P>
+            <P name="translatex">47</P>
+            <P name="translatey">47</P>
+            <P name="scalex">47</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">48</P>
             <P name="width">48</P>
             <P name="height">48</P>
+            <P name="translatex">48</P>
+            <P name="translatey">48</P>
+            <P name="scalex">48</P>
+            <P name="scaley">1</P>
         </PRE>
         <PRE>
             <P name="texture">49</P>
             <P name="width">49</P>
             <P name="height">49</P>
+            <P name="translatex">49</P>
+            <P name="translatey">49</P>
+            <P name="scalex">49</P>
+            <P name="scaley">1</P>
         </PRE>
     </PRECONFIGS>
 </MOCONFIG>
