--- a/basic/13_OpenFace/openface.cfg
+++ b/basic/13_OpenFace/openface.cfg
@@ -16,6 +16,12 @@
                 <D type="TXT">DATAMESSAGE</D>
             </VAL>
             <VAL>
+                <D type="TXT">DATAVECTORMESSAGE</D>
+                <D type="TXT">MESSAGE</D>
+                <D type="TXT">MASK</D>
+                <D type="TXT">DATAVECTORMESSAGE</D>
+            </VAL>
+            <VAL>
                 <D type="TXT">FACE_POSITION_X</D>
                 <D type="TXT">NUMERIC</D>
                 <D type="TXT">SOMBRERO</D>
@@ -70,6 +76,10 @@
                 <D type="TXT">EULER_ANGLE_X</D>
                 <D type="TXT">MASK</D>
                 <D type="TXT">EULER_ANGLE_X</D>
+                <D type="TXT">PRECIPITACION</D>
+                <D type="TXT">EULER_ANGLE_X</D>
+                <D type="TXT">CONDENSACION</D>
+                <D type="TXT">EULER_ANGLE_X</D>
             </VAL>
             <VAL>
                 <D type="TXT">FACE_ANGLE_Y</D>
@@ -78,6 +88,10 @@
                 <D type="TXT">EULER_ANGLE_Y</D>
                 <D type="TXT">MASK</D>
                 <D type="TXT">EULER_ANGLE_Y</D>
+                <D type="TXT">PRECIPITACION</D>
+                <D type="TXT">EULER_ANGLE_Y</D>
+                <D type="TXT">CONDENSACION</D>
+                <D type="TXT">EULER_ANGLE_Y</D>
             </VAL>
             <VAL>
                 <D type="TXT">FACE_ANGLE_Z</D>
@@ -85,6 +99,10 @@
                 <D type="TXT">SOMBRERO</D>
                 <D type="TXT">EULER_ANGLE_Z</D>
                 <D type="TXT">MASK</D>
+                <D type="TXT">EULER_ANGLE_Z</D>
+                <D type="TXT">PRECIPITACION</D>
+                <D type="TXT">EULER_ANGLE_Z</D>
+                <D type="TXT">CONDENSACION</D>
                 <D type="TXT">EULER_ANGLE_Z</D>
             </VAL>
         </PARAM>
