--- a/basic/13_OpenFace/videomanager.cfg
+++ b/basic/13_OpenFace/videomanager.cfg
@@ -14,7 +14,7 @@
         <PARAM name="preferreddevices" type="TEXT">
             <VAL>
                 <D type="TXT" code="CODENAME">Default</D>
-                <D type="TXT" code="DEVICENAME">default</D>
+                <D type="TXT" code="DEVICENAME">/dev/video1</D>
                 <D type="NUM">0</D>
                 <D type="NUM">320</D>
                 <D type="NUM">240</D>
