--- a/basic/13_OpenFace/SOMBRERO.cfg
+++ b/basic/13_OpenFace/SOMBRERO.cfg
@@ -77,7 +77,7 @@
         </PARAM>
         <PARAM name="object" type="TEXT">
             <VAL>
-                <D type="TXT">cilindrosombrero.obj</D>
+                <D type="TXT">piratehat.dae</D>
             </VAL>
         </PARAM>
         <PARAM name="texture" type="TEXTURE">
@@ -158,7 +158,7 @@
         </PARAM>
         <PARAM name="translatey" type="TRANSLATEY">
             <VAL>
-                <D type="FUNCTION">-FACE_POSITION_Y*0.032</D>
+                <D type="FUNCTION">-FACE_POSITION_Y*0.07</D>
             </VAL>
         </PARAM>
         <PARAM name="translatez" type="TRANSLATEZ">
@@ -183,17 +183,17 @@
         </PARAM>
         <PARAM name="scalex" type="SCALEX">
             <VAL>
-                <D type="FUNCTION">scalez*screen_height/screen_width</D>
+                <D type="FUNCTION">1.0*scalez*screen_height/screen_width</D>
             </VAL>
         </PARAM>
         <PARAM name="scaley" type="SCALEY">
             <VAL>
-                <D type="FUNCTION">scalez</D>
+                <D type="FUNCTION">scalez*1.0*(4/3)*screen_height/screen_width</D>
             </VAL>
         </PARAM>
         <PARAM name="scalez" type="SCALEZ" property="published">
             <VAL>
-                <D type="FUNCTION">3.0</D>
+                <D type="FUNCTION">1</D>
             </VAL>
         </PARAM>
         <PARAM name="eyex" type="FUNCTION">
@@ -226,34 +226,49 @@
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="lightx" type="FUNCTION">
+        <PARAM name="lightx" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.5</D>
+                <D type="FUNCTION">0</D>
             </VAL>
         </PARAM>
-        <PARAM name="lighty" type="FUNCTION">
+        <PARAM name="lighty" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.5</D>
+                <D type="FUNCTION">10</D>
             </VAL>
         </PARAM>
-        <PARAM name="lightz" type="FUNCTION">
+        <PARAM name="lightz" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">0.5</D>
+                <D type="FUNCTION">20+5*cos(time)</D>
             </VAL>
         </PARAM>
-        <PARAM name="offsetx" type="FUNCTION">
+        <PARAM name="offsetx" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="offsety" type="FUNCTION">
+        <PARAM name="offsety" type="FUNCTION" property="published">
             <VAL>
-                <D type="FUNCTION">-0.1</D>
+                <D type="FUNCTION">0.0</D>
             </VAL>
         </PARAM>
-        <PARAM name="offsetz" type="FUNCTION">
+        <PARAM name="offsetz" type="FUNCTION" property="published">
             <VAL>
                 <D type="FUNCTION">0</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="cullface" type="NUM" property="published" options="AUTOMATIC,ENABLED,DISABLED">
+            <VAL>
+                <D type="NUM">1</D>
+            </VAL>
+        </PARAM>
+        <PARAM name="vertices_openface" type="TEXT">
+            <VAL>
+                <D type="TXT"></D>
+            </VAL>
+        </PARAM>
+        <PARAM name="no_perspective" type="NUM" options="AUTO,ON">
+            <VAL>
+                <D type="NUM">0</D>
             </VAL>
         </PARAM>
     </CONFIGPARAMS>
